# remaro_uw_sim

./: .gitmodules  CMakeLists.txt  README.md  package.xml
airsim_ros/airsim_ros/: CMakeLists.txt  package.xml
airsim_ros/airsim_ros_pkgs/: CMakeLists.txt
airsim_ros/airsim_ros_pkgs/include/: airsim_ros_wrapper.h  airsim_settings_parser.h
airsim_ros/airsim_ros_pkgs/launch/: airsim_node.launch
airsim_ros/airsim_ros_pkgs/src/: airsim_ros_wrapper.cpp  airsim_settings_parser.cpp
airsim_ros/gazebodrone/: CMakeLists.txt  package.xml
airsim_ros_pkgs/: CMakeLists.txt
airsim_ros_pkgs/include/: airsim_ros_wrapper.h
airsim_ros_pkgs/launch/: airsim_node.launch.py
airsim_ros_pkgs/src/: airsim_node.cpp  airsim_ros_wrapper.cpp
bluerov2/: README.md
bluerov2/bluerov2/: CMakeLists.txt  package.xml
bluerov2/bluerov2_control/: CHANGELOG.rst  CMakeLists.txt  package.xml
bluerov2/bluerov2_control/config/: inertial.yaml  model_params.yaml  model_params_exact.yaml  pos_pid_control.yaml  thruster_manager.yaml
bluerov2/bluerov2_control/launch/: record_demo.launch  start_mb_fl_controller.launch  start_nmb_sm_controller.launch  start_pd_grav_compensation_controller.launch  start_pid_controller.launch  start_sf_controller.launch  start_thruster_manager.launch  start_velocity_control.launch
bluerov2/bluerov2_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
bluerov2/bluerov2_description/launch/: upload_bluerov2.launch  upload_bluerov2_oberon4.launch  upload_bluerov2_oberon7.launch  upload_bluerov2_oberon_arms.launch
bluerov2/bluerov2_description/meshes/: sensor_bar30.STL  sensor_lowlightcamera.STL
bluerov2/bluerov2_description/robots/: bluerov2_default.xacro  rexrov2_oberon4.xacro  rexrov2_oberon7.xacro  rexrov2_oberon_arms.xacro
bluerov2/bluerov2_description/test/: test_urdf_files.py  test_urdf_files.test
bluerov2/bluerov2_description/urdf/: bluerov2.gazebo.xacro  bluerov2_actuators.xacro  bluerov2_base.xacro  bluerov2_sensors.xacro  bluerov2_snippets.xacro  camera_snippets.xacro  pressure_snippets.xacro  sensor_snippets.xacro
bluerov2/bluerov2_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
bluerov2/bluerov2_gazebo/launch/: record.launch  start_demo_mb_fl_controller.launch  start_demo_nmb_sm_controller.launch  start_demo_pd_grav_compensation_controller.launch  start_demo_pid_controller.launch  start_demo_sf_controller.launch
launch/: uuv_simulator.launch
neptusROV/: README.md
neptusROV/neptus_interface/: CMakeLists.txt
neptusROV/neptus_interface/launch/: lauv_simulator_1.launch.py
neptusROV/neptus_interface/src/: neptus_pose_to_unavsim_pose.cpp
remaro_rov_control/: CMakeLists.txt  package.xml
remaro_rov_control/config/bluerov2/: TAM.yaml  inertial.yaml  thruster_manager.yaml  vel_pid_control.yaml
remaro_rov_control/launch/: bluerov2_thruster_manager.launch  bluerov2_vel_joy.launch  reset_tam.launch  thruster_manager.launch
remaro_rov_models/: CMakeLists.txt  package.xml
remaro_rov_models/launch/: upload_bluerov2.launch
remaro_rov_models/robots/: bluerov2.xacro
remaro_rov_models/urdf/bluerov2/: actuators.xacro  base.xacro  camera_snippets.xacro  gazebo.xacro  sensors.xacro  snippets.xacro
remaro_uw_sim/: CMakeLists.txt  Remarosim.code-workspace  package.xml
remaro_uw_sim/launch/: bluerov2_joy_simulator.launch  uuv_simulator.launch
unavsim_ros_pkgs/: CMakeLists.txt  package.xml
unavsim_ros_pkgs/config/: recorder_config.json  settings.json
unavsim_ros_pkgs/include/: airsim_ros_wrapper.h  pd_position_controller_simple.h
unavsim_ros_pkgs/scripts/: mimir_recorder.py
unavsim_ros_pkgs/src/: airsim_ros_wrapper.cpp
uwsim/: CMakeLists.txt  package.xml
uwsim/config/: bluerov2.rviz  example_waypoints.yaml
uwsim/launch/: airsim_gazebo.launch  airsim_joy.launch  gazebo_backend.launch  hackaton.launch  rexrov_joy_simulator.launch  sonar_slam.launch  spawn_bluerov2.launch  spawn_rexrov2.launch
uwsim/rviz/: bluerov2.rviz  rexrov2.rviz
uwsim/src/: airsim_joy.py
