<?xml version="1.0"?>
<package format="2">
  <name>remaro_uw_sim</name>
  <version>0.0.0</version>
  <description>The remaro_uw_sim package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="olaya@ece.au.dk">Olaya Alvarez Tunon</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
    <exec_depend>bluerov2</exec_depend>
    <exec_depend>rexrov2</exec_depend>
    <exec_depend>uwsim</exec_depend>
    <exec_depend>airsim_ros</exec_depend>
    <exec_depend>remaro_worlds</exec_depend>
    <export><metapackage/></export>

</package>
