<?xml version="1.0"?>
<package format="2">
  <name>airsim_ros</name>
  <version>0.0.0</version>
  <description>The airsim_ros package</description>

  <maintainer email="olaya@ece.au.dk">Olaya Alvarez Tunon</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>airsim_ros_pkgs</exec_depend> 
  <exec_depend>airsim_tutorial_pkgs</exec_depend> 
  <exec_depend>gazebodrone</exec_depend> 

  <export><metapackage/></export>
</package>
