<?xml version="1.0"?>
<package format="2">
  <name>bluerov2_control</name>
  <version>0.1.3</version>
  <description>Launch and configuration files to start controllers nodes from the [`uuv_trajectory_control`](https://github.com/uuvsimulator/uuv_simulator/tree/master/uuv_control/uuv_trajectory_control) package for the bluerov 2 vehicle.</description>

  <maintainer email="olaya@ece.au.dk">Olaya Alvarez Tunon</maintainer>


  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>uuv_control_cascaded_pid</exec_depend>
  <exec_depend>uuv_thruster_manager</exec_depend>
  <exec_depend>uuv_trajectory_control</exec_depend>
</package>
