<?xml version="1.0"?>
<package format="2">
  <name>bluerov2_gazebo</name>
  <version>0.1.3</version>
  <description>Package with launch files for demonstrations with the bluerov 2 vehicle with different positioning controllers.</description>

  <maintainer email="olaya@ece.au.dk">Olaya Alvarez Tunon</maintainer>


  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>bluerov2_description</exec_depend>
  <exec_depend>bluerov2_control</exec_depend>

</package>
